--- a/resume-cn.tex
+++ b/resume-cn.tex
@@ -9,26 +9,32 @@
 \begin{document}
 
 \name{吴建宇}
-
-\section{个人信息}
-\begin{itemize}
-\item{姓名}：吴建宇
-\item{性别}：男
-\item{学号}：21371377
-\item{微信}：uanuwx
-\item \phone{15050772492}
-\item \email{uanu2002@163.com}
-\item \github[uanu2002]{https://github.com/uanu2002}
-\item \homepage[uanu2002.top]{https://www.uanu2002.top}
-\end{itemize}
+\basicInfo{
+  % \phone{} \textperiodcentered\
+  \email{uanu2002@163.com} \textperiodcentered\
+  \github[uanu2002]{https://github.com/uanu2002} \textperiodcentered\
+  \homepage[uanu2002.top]{https://www.uanu2002.top}
+}
 
 \section{教育背景}
 \datedsubsection{\textbf{北京航空航天大学}}{2021.09 -- 现在}
-\role{本科大二，在读}{人工智能专业; GPA 3.85/4.00; 排名 5/30}
-\subsection{\textbf{课程成绩}}
+\role{本科大二，在读}{人工智能专业; GPA 3.85/4.00; 排名 6/30}
+
+\section{科研经历}
+\datedsubsection{\textbf{北京航空航天大学}}{2021.08 -- 2022.06}
 \begin{itemize}
-  \item \textbf{程序设计基础}：\textbf{93}
-  \item \textbf{数据结构与程序设计(信息类)}：\textbf{99}
+  \item 经历1
+  \item 经历2
+\end{itemize}
+
+\section{项目开发}
+\subsection{\textbf{底层系统}}
+\subsection{\textbf{网页开发}}
+\begin{itemize}
+  \item \textbf{你我牠} (Html, JavaScript, CSS)：
+        作为队长和主程序员进行网站开发。
+  \item \textbf{项目2} (语言/技术):
+	   xxxx
 \end{itemize}
 
 \section{获奖情况}
@@ -37,11 +43,9 @@
   \item \datedline{蓝桥杯软件类省赛（\textit{二等奖}）}{2022.06}
 \end{itemize}
 
-\section{项目开发}
-\subsection{\textbf{网页开发}}
+\subsection{\textbf{奖学金}}
 \begin{itemize}
-  \item \textbf{你我牠} (Html, JavaScript, CSS)：
-        作为队长和主程序员进行网站开发。
+  \item \datedline{name（\textit{等级}）}{time}
 \end{itemize}
 
 \section{专业技能}
@@ -50,15 +54,15 @@
   \item \textbf{开发环境}：能熟练使用Linux; 熟悉 Git 与 Gitflow 协作流程
 \end{itemize}
 
-\section{申请原因及优势}
+\section{其他}
 \begin{itemize}
-  \item \textbf{申请原因}：大一新生第一次接触程序设计，几乎都需要花费大量的时间入门和debug。我想利用我的知识和经验让学弟学妹们不再踩坑，不再因debug而痛苦，从而更快更好的掌握程序设计这门课。
-  \item \textbf{个人优势}
-    \begin{itemize}
-      \item \textbf{基础扎实}：对大一学年程序设计相关课程透彻且取得较好成绩；写代码和debug经验丰富，擅长分析和解决bug。
-	 \item \textbf{学习创新}：乐于学习新知识、掌握新技能。担任助教后我会积极参与OJ题目和题解的编写。
-	 \item \textbf{善于分析总结}：对知识点有较强的总结能力，同时可以以博客形式进行分享，已经在个人博客\url{uanu2002.top}上创作数十篇文章。
-	 \item \textbf{乐于助人}：平时善于与他人沟通并乐于帮助他人解决问题。担任助教后我能够腾出足够的时间为学弟学妹们解答疑惑，此外还会定期或在考期前举办串讲。
-    \end{itemize}
+  \item \textbf{助教工作}：
+        \begin{itemize}
+          \item \datedline{\textbf{程序设计基础训练}（北航信息类专业）}{2022.09 -- 2023.02}
+                \role{课程助教}{负责出题和答疑}
+        \end{itemize}
+  \item \textbf{社会实践}：志愿服务总时长超 50 小时；
+  \item \textbf{博客}：已在个人博客\url{https://www.uanu2002.top} 创作约 30 篇文章
+  \item \textbf{外语}：英语（CET-4）
 \end{itemize}
 \end{document}
