--- a/resume-cn.tex
+++ b/resume-cn.tex
@@ -19,6 +19,7 @@
 \section{教育背景}
 \datedsubsection{\textbf{北京航空航天大学}}{2021.09 -- 现在}
 \role{本科大二，在读}{人工智能专业; GPA 3.85/4.00; 排名 6/30}
+\role{辅修学士学位}{数学与应用数学专业}
 
 \section{科研经历}
 \datedsubsection{\textbf{北京航空航天大学}}{2021.08 -- 2022.06}
@@ -60,9 +61,11 @@
         \begin{itemize}
           \item \datedline{\textbf{程序设计基础训练}（北航信息类专业）}{2022.09 -- 2023.02}
                 \role{课程助教}{负责出题和答疑}
+	     \item \datedline{\textbf{工科数学分析、工科高等代数、离散数学等}（北京学院）}{2022.10 -- 2023.02}
+			\role{学业梦拓}{负责答疑和课程指导}
         \end{itemize}
-  \item \textbf{社会实践}：志愿服务总时长超 50 小时；
-  \item \textbf{博客}：已在个人博客\url{https://www.uanu2002.top} 创作约 30 篇文章
+  \item \textbf{社会实践}：志愿服务总时长超 70 小时；
+  \item \textbf{博客}：已在个人博客\url{https://www.uanu2002.top} 创作约 40 篇文章
   \item \textbf{外语}：英语（CET-4）
 \end{itemize}
 \end{document}
