--- a/resume-cn.tex
+++ b/resume-cn.tex
@@ -19,13 +19,14 @@
 \section{教育背景}
 \datedsubsection{\textbf{北京航空航天大学}}{2021.09 -- 现在}
 \role{本科大二，在读}{人工智能专业; GPA 3.85/4.00; 排名 6/30}
-\role{辅修学士学位}{数学与应用数学专业}
+\role{辅修学士学位，在读}{数学与应用数学专业}
 
 \section{科研经历}
-\datedsubsection{\textbf{北京航空航天大学}}{2021.08 -- 2022.06}
+\datedsubsection{\textbf{北京航空航天大学}}{2022.08 -- 2022.12}
 \begin{itemize}
-  \item 经历1
-  \item 经历2
+  \item 基于深度学习的高度近视黄斑区病变量化表征
+  \item 对diffusion等模型进行压缩加速，实现轻量化部署，包括参数裁剪、低秩因子化、知识蒸馏等
+  \item 态势感知和融合系统
 \end{itemize}
 
 \section{项目开发}
@@ -33,9 +34,9 @@
 \subsection{\textbf{网页开发}}
 \begin{itemize}
   \item \textbf{你我牠} (Html, JavaScript, CSS)：
-        作为队长和主程序员进行网站开发。
-  \item \textbf{项目2} (语言/技术):
-	   xxxx
+        动物保护网站，作为队长和主程序员进行网站开发。
+  \item \textbf{桌宠} (Vue3，Java, SpringBoot):
+	   桌面宠物，负责网页端和服务器端开发。
 \end{itemize}
 
 \section{获奖情况}
@@ -46,12 +47,13 @@
 
 \subsection{\textbf{奖学金}}
 \begin{itemize}
-  \item \datedline{name（\textit{等级}）}{time}
+  \item \datedline{校级学习优秀奖学金（\textit{二等奖}）}{2022.11}
+  \item \datedline{学科竞赛奖学金（\textit{一等奖}）}{2022.11}
 \end{itemize}
 
 \section{专业技能}
 \begin{itemize}
-  \item \textbf{编程语言}：C, C++, Java, Python, JavaScript
+  \item \textbf{编程语言}：C, C++, Java, Python, JavaScript, SQL
   \item \textbf{开发环境}：能熟练使用Linux; 熟悉 Git 与 Gitflow 协作流程
 \end{itemize}
 
@@ -62,10 +64,10 @@
           \item \datedline{\textbf{程序设计基础训练}（北航信息类专业）}{2022.09 -- 2023.02}
                 \role{课程助教}{负责出题和答疑}
 	     \item \datedline{\textbf{工科数学分析、工科高等代数、离散数学等}（北京学院）}{2022.10 -- 2023.02}
-			\role{学业梦拓}{负责答疑和课程指导}
+			\role{学业梦拓}{负责串讲和课程指导}
         \end{itemize}
-  \item \textbf{社会实践}：志愿服务总时长超 70 小时；
-  \item \textbf{博客}：已在个人博客\url{https://www.uanu2002.top} 创作约 40 篇文章
+  \item \textbf{社会实践}：志愿服务总时长超 120 小时；
+  \item \textbf{博客}：已在个人博客\url{https://www.uanu2002.top} 创作约 30 篇文章
   \item \textbf{外语}：英语（CET-4）
 \end{itemize}
 \end{document}
